--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Golden Crust Bakery - Fresh Baked Daily</title>
-    <meta name="description" content="Experience artisan baking at Golden Crust Bakery. Fresh breads, cookies, cakes, pizzas and more - baked daily with the finest ingredients." />
-    <meta name="author" content="Golden Crust Bakery" />
+    <title>Emoticon Bakery - Fresh Baked Daily</title>
+    <meta name="description" content="Experience artisan baking at Emoticon Bakery. Fresh breads, cookies, cakes, pizzas and more - baked daily with the finest ingredients." />
+    <meta name="author" content="Emoticon" />
 
-    <meta property="og:title" content="Golden Crust Bakery - Fresh Baked Daily" />
+    <meta property="og:title" content="Emoticon - Fresh Baked Daily" />
     <meta property="og:description" content="Experience artisan baking at Golden Crust Bakery. Fresh breads, cookies, cakes, pizzas and more - baked daily with the finest ingredients." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
